yaml/ingress.yaml
apiVersion: "networking.k8s.io/v1" 
kind: "Ingress"
metadata:
  namespace: "example-namespace"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/actions.ssl-redirect: "{\"Type\": \"redirect\", \"RedirectConfig\"\
      : { \"Protocol\": \"HTTPS\", \"Port\": \"443\", \"StatusCode\": \"HTTP_301\"\
      }}"
    alb.ingress.kubernetes.io/group.name: "exampleIngressGroup"
    alb.ingress.kubernetes.io/listen-ports: "[{\"HTTP\": 80}, {\"HTTPS\":443}]"
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:000000000:certificate/asdfsda00-0000-0000-0000-ihgjagsd9877asdf"
  name: "stayalive-example"
spec:
  rules:
  - host: "stayalive-example.com"
    http:
      paths:
      - backend:
          service:
            name: "example-service"
            port:
              name: "http"
        path: "/stayalive/"
        pathType: "Prefix"
